--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "antd": "^3.25.0",
+    "axios": "^0.19.0",
+    "formik": "^2.0.6",
     "gh-pages": "^2.1.1",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.1",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
