--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "lint": "eslint src/**",
-    "lint:fix": "eslint --fix src/**"
+    "lint": "./node_modules/.bin/eslint --ext js,jsx \"src/\"",
+    "lint:fix": "./node_modules/.bin/eslint --fix --ext js,jsx \"src/\""
   },
   "eslintConfig": {
     "extends": "react-app"
