--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.25.0",
     "axios": "^0.19.0",
     "formik": "^2.0.6",
+    "formik-antd": "^1.6.0",
     "gh-pages": "^2.1.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
