--- a/package.json
+++ b/package.json
@@ -26,12 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "lint": "./node_modules/.bin/eslint --ext js,jsx \"src/\"",
-    "lint:fix": "./node_modules/.bin/eslint --fix --ext js,jsx \"src/\""
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -45,10 +40,8 @@
       "last 1 safari version"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
