--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-beautiful-dnd": "^12.2.0",
     "react-dom": "^16.12.0",
     "react-images": "^1.1.0-beta.3",
     "react-infinite-scroll-component": "^5.0.4",
