--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.25.0",
+    "array-move": "^2.2.1",
     "axios": "^0.19.0",
     "date-fns": "^2.8.1",
     "formik": "^2.0.6",
@@ -13,12 +14,12 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-beautiful-dnd": "^12.2.0",
     "react-dom": "^16.12.0",
     "react-images": "^1.1.0-beta.3",
     "react-infinite-scroll-component": "^5.0.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-sortable-hoc": "^1.11.0",
     "styled-components": "^4.4.1",
     "yup": "^0.27.0"
   },
