--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik-antd": "^1.6.0",
     "gh-pages": "^2.1.1",
     "libphonenumber-js": "^1.7.30",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -17,6 +18,8 @@
     "react-infinite-scroll-component": "^5.0.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "styled-components": "^4.4.1",
     "yup": "^0.27.0"
   },
@@ -26,7 +29,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "lint": "./node_modules/.bin/eslint --ext js,jsx \"src/\"",
+    "lint:fix": "./node_modules/.bin/eslint --fix --ext js,jsx \"src/\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "browserslist": {
     "production": [
