--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-images": "^1.1.0-beta.3",
     "react-infinite-scroll-component": "^5.0.4",
+    "react-quill": "^1.3.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-sortable-hoc": "^1.11.0",
