--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.0.6",
     "formik-antd": "^1.6.0",
     "gh-pages": "^2.1.1",
+    "interweave": "^12.2.1",
     "libphonenumber-js": "^1.7.30",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
