fix-topic-router

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,13 +14,18 @@
     "prettier/prettier": ["error", {
       "singleQuote": true,
       "trailingComma": "es5",
-      "endOfLine": "lf",
+      "endOfLine": "auto", //es-lint не ругается на lf 
       "printWidth": 100
     }],
     "max-depth": ["warn", 4],
-    "id-length": ["warn", { "exceptions": ["i", "j"], "min": 2 }],
+    "id-length": ["warn", {
+      "exceptions": ["i", "j"],
+      "min": 2
+    }],
     "no-lonely-if": ["error"],
-    "no-plusplus": ["error", {"allowForLoopAfterthoughts": true}],
+    "no-plusplus": ["error", {
+      "allowForLoopAfterthoughts": true
+    }],
     "react/state-in-constructor": ["off"],
     "jsx-a11y/href-no-hash": ["off"],
     "react/jsx-props-no-spreading": ["off"]
