--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL="http://oldranger.club:8888/"
+#REACT_APP_BASE_URL="http://oldranger.club:8888/"
+REACT_APP_BASE_URL="http://localhost:8888/"
