--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "array-move": "^2.2.1",
     "axios": "^0.19.0",
     "date-fns": "^2.8.1",
+    "dompurify": "^2.0.12",
     "dotenv": "^8.2.0",
     "formik": "^2.0.6",
     "formik-antd": "^1.6.0",
