--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "gh-pages": "^2.1.1",
     "interweave": "^12.2.1",
     "libphonenumber-js": "^1.7.30",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-dnd": "^11.1.3",
     "react-dom": "^16.12.0",
     "react-images": "^1.1.0-beta.3",
     "react-infinite-scroll-component": "^5.0.4",
@@ -27,6 +28,7 @@
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.2.0",
     "react-sortable-hoc": "^1.11.0",
+    "react-sortable-tree": "^2.7.1",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "styled-components": "^4.4.1",
