--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.1.0",
     "react-sortable-hoc": "^1.11.0",
     "react-sortable-tree": "^2.7.1",
     "sockjs-client": "^1.4.0",
